static/style.css
body { 
    padding-top: 56px; 
    background-color: #D9F0EF;
    font-family: 'Lato', sans-serif;
    /* font-weight: 100; */
}

.left-aligned { 
    margin-left: auto; 
}
.bg-dark { 
    background-color: #EE8A8B !important; 
}
.bg-hero { 
    background-color: #45b06cff; 
}

/* CALLOUT */
.bd-callout { 
    padding:1.25rem; margin-top:1.25rem; margin-bottom:1.25rem; border:1px solid #e9ecef; border-left-width:.25rem; border-radius:.25rem 
}
.bd-callout h4 { 
    margin-bottom:.25rem 
}
.bd-callout p:last-child { 
    margin-bottom:0 
}
.bd-callout code { 
    border-radius:.25rem 
}
.bd-callout+.bd-callout { 
    margin-top:-.25rem 
}
.bd-callout-info { 
    border-left-color:#5bc0de
 }
.bd-callout-warning {
    border-left-color:#f0ad4e 
}
.bd-callout-danger {
    border-left-color:#d9534f 
}

/* footer */
footer a { 
    color: white; font-weight: bold; text-decoration: none; 
}
footer a:hover { 
    color: white; text-decoration: underline;
}

/* Page styles */

.header-text {
    font-size: 70px;
    background-color: #EBF7F7;
    color: #FFD972;
    font-style: italic;
    font-weight: bold;
    text-align: center;
    letter-spacing: 2px;
    padding-bottom: 1rem;
    width: 700px;
    height: 100px;
    text-shadow: 1px 3px 8px rgba(80, 96, 100, 0.521);
}

.subheader {
    font-size: 40px;
    background-color: #FFF7F7;
    color: #EE8A8B;
    font-weight: 900;
    text-align: center;
    font-style: italic;
    width: fit-content;
    border-radius: 10px;
    padding: 15px;
    padding-top: 5px;
    padding-bottom: 7px;
    margin-bottom: 1rem;
    text-shadow: 1px 3px 3px rgba(80, 96, 100, 0.209);
}
.links a{
    color: #FFF7F7;
}


.subheader_small {
    font-size: 25px;
    background-color: #FFF7F7;
    color: #EE8A8B;
    font-weight: 600;
    text-align: center;
    font-style: normal;
    width: fit-content;
    border-radius: 10px;
    padding: 15px;
    padding-top: 5px;
    padding-bottom: 7px;
    margin-top: 20px;
    margin-bottom:10px;
}

.exp_div {
    background-color: #f6b7b3;
    color: #ffffff;
    border-radius: 30px;
    padding: 40px;
    padding-top: 30px;
    padding-bottom: 20px;
    tab-size: 10;
    float:right;
    overflow-wrap: break-word;
}

/* ToC styles */
/* ToC styles */
.toc-header {
    background: #EE8A8B;
    padding: 5px 5px 0;
    border-radius: 15px 15px 0 0;
    min-height: 50px;
    display: flex;
    align-items: center;
}

.toc-heading {
    font-size: 20px;
    color: #fff;
    margin: 0;
    text-align: left;
    width: 100%;
    font-weight: 600;
    padding: 0 20px 0;
}

.toc-list-wrapper {
    position: -webkit-sticky; 
    position: sticky;
    top: 15vh; /* note: this decides place on screen. for smaller toc we might want to make this bigger (so it fits in middle) */
    max-height: calc(100vh - 20px); 
    overflow-y: auto;
}

.toc-list {
    border-radius: 0 0 15px 15px;
    background: #EE8A8B;
    margin: 0;
    list-style: none;
    padding: 0 17px;
    font-size: 15px;
    padding-bottom: 10px;
}

.toc-list-header a {
    position: relative;
    color: #fff;
    text-decoration: none;
    font-weight: 600;
    display: block;
    padding: 10px;
    border-radius: 10px;
    cursor: pointer;
    transition: .2s ease;
    font-size: 15px;
}

.toc-list-item a:hover,
.toc-list-header a:hover {
    box-shadow: 0 8px 15px rgb(246 90 100 / .55);
    background: #FBC1BD;
    color: #fff;
    border-radius: 10px;
}

.toc-list-items {
    list-style: none;
    padding-left: 30px;
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.4s ease;
}

.show {
    max-height: 500px;
}


/* Team page css */
.big_group_picture{
    background-color: white;
    padding:20%;
}

.team_image{
    background-color: lightblue;
    padding: 30%;
    margin: 2% 0% 0% 0%;
    border-radius: 50%;
}

.name{
    font-size: 20px;
    color: #855754;
    background-color: #fcbcb8;
    letter-spacing: .5px;
    padding:1%;
    border-radius: 15px;
    width:50%; 
    /* change above WIDTH based on how everything alligns. */
    margin: 2% 0% .5% 0%;
    text-align: center;
}

.job{
    background-color: #77cece;
    padding:1%;
    width:50%;
    border-radius: 15px;
    font-size: 15px;
    margin: .5% 0% 4% 0%;
    text-align: center;
}

.members {
    display: flex;
    flex-wrap: wrap; 
    flex-direction: row;
    justify-content: space-around;

}
.person{
    flex-basis: 33%;
    display: flex;
    flex-direction: column;
    align-items: center;
    align-items: center;
    padding: 0px;

}


.center {
    align-items: center;
    margin-left: auto;
    margin-right: auto;
    max-width: fit-content;
}
/* popup styling */

.team-popup{
    text-align: center;
    align-self: center;
    width: 60vw;
    height: 70vh;
    background-color: #FBC1BD;
    border-radius: 30px;
    /* align-items: center; */
    position:fixed;
    top:20vh;
    left:30vh;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    /* display:none; */
    visibility:hidden;
}

.team-popup .left {
    padding-top: 40px;
    width: 55%;

}

.team-popup .name {
    padding: 5px 10px 5px;
    background-color: #EE8A8B;
    color: white;
    text-align: center;
    font-size: 25px;
    width: 70%;
    margin-top: 2%;
    margin-left: 5%;
    border-radius: 10px;

}

.team-popup .name.job {
    background-color: #ffffff92;
    color: #EE8A8B;
    font-size: 20px;
    width: 55%;

    border: 2px solid white;
  
}

.team-popup .description {
    width: 80%;
    text-align: left;
    float:left;
    height: 325px;
    background-color: #ffffff82;
    color: #EE8A8B;
    border: 2px solid white;
    font-size: 20px;
    border-radius: 10px;
    margin-left:5%;
   
}

.team-popup .description p {
    padding: 10px;
}
.team-popup .right{
    width: 45%;
    /* display: flex;
    justify-content: space-around; */

}
.team-popup .memberPicture{
    background-image: url("../static/images/person.png");
    background-size: cover;
    margin: 10% 10% 5% 10%;
    width: 80%;
    height: 85%;
    border: 2px solid black; /*change color as needed  */
    border-radius: 10%;
}

